--- a/raon-control/style.css
+++ b/raon-control/style.css
@@ -28,3 +28,10 @@
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.pvname {
+    color: dimgray;
+    font-size: 15px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
