--- a/raon-control/style.css
+++ b/raon-control/style.css
@@ -1,25 +1,26 @@
-
-.control {
-    position: relative;
-    display: block;
-    background-color: black;
-    margin: 5px;
-}
-
 .contents-box {
     margin: 5px;
     width: 300px;
     height: 300px;
     float: left;
     background-color: #1d1d1d;
+    border: 2px solid black;
 }
 
 .wide-box {
     margin: 5px;
-    width: 610px;
+    width: 614px;
     height: 300px;
     float: left;
-    background-color: #1d1d1d;
+    background-color: #1d1d1d;    
+    border: 2px solid black;
+}
+
+.title {
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    font-family: monospace;
 }
 
 .data {
