--- a/raon-control/test.css
+++ b/raon-control/test.css
@@ -1,50 +1,42 @@
-.search-box {
+.member-box {
+    margin: 5px;
+    width: 548px;
+    height: 300px;
     background-color: black;
-    margin: auto;
-    max-width: 800px;
-    box-sizing: border-box;
+    border: 1px solid white;
 }
 
-.search-box #input {
-    padding: 10px;
-    font-size: 25px;
-    border: 1px solid #1d1d1d;
-    float: left;
-    width: 80%;
-    background: #1d1d1d;
+.avatar {
+    margin: 10px;
+    width: 100px;
+    height: 100px;
+    background-color: #1d1d1d;
+    border: 1px solid white;
+}
+
+.member-info {
+    box-sizing: border-box;
+    margin: 10px;
+    width: 400px;
+    height: 100px;
+    background-color: #1d1d1d;
+    border: 1px solid white;
+    color: white;
+    padding: 20x;
+}
+
+.member-work {
+    margin: 10px;
+    width: 524px;
+    height: 150px;
+    background-color: #1d1d1d;
+    border: 1px solid white;
     color: white
 }
-
-.search-box #button {
-    float: left;
-    width: 10%;
-    padding: 10px;
-    background: #1d1d1d;
-    color: white;
-    font-size: 25px;
-    border: 1px solid #1d1d1d;
-    border-left: none;
-    cursor: pointer;
-}
-
-#retriveData {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 1000px;
-    margin: auto;
-    border-spacing: 15px;
-}
-
-#retriveData th {
-    color: white;
-    background-color: dodgerblue;
-    font-size: 20px;
-    height: 40px;
-}
-
-#retriveData td {
-    color: white;
-    background-color: #1d1d1d;
-    font-size: 20px;
-    height: 40px;
+.test {
+    box-sizing: border-box;
+    width: 300px;
+    height: 100px;
+    padding: 20px;  
+    border: 10px solid blue;
 }
