--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -99,8 +99,8 @@ body {
 
 .data {
     color: white;
-    font-size: 40px;
-    text-align: center;
+    font-size: 20px;
+    /* text-align: center; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -132,6 +132,8 @@ body {
 }
 
 .grid-item {
+    background-color: rgba(26, 26, 26, 0.3);
+    border: 1px solid rgba(50, 50, 50, 0.3);
     animation-name: scaleUp;
     animation-duration: 0.5s;
     animation-timing-function: linear;
