--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -141,10 +141,10 @@ body {
 .grid-item {
     background-color: rgba(26, 26, 26, 0.3);
     border: 1px solid rgba(50, 50, 50, 0.3);
-    animation-name: scaleUp;
+    /* animation-name: scaleUp;
     animation-duration: 0.5s;
     animation-timing-function: linear;
-    animation-fill-mode: forwards;
+    animation-fill-mode: forwards; */
 }
 
 #module {
@@ -167,10 +167,12 @@ body {
 
 @keyframes scaleUp {
     from {
+
         transform: scale(0);
     }
 
     to {
+
         transform: scale(1.0);
     }
 }
