--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -153,6 +153,36 @@ body {
     top: 50px;
 }
 
+.box {
+    width: 100px;
+    height: 100px;
+    border: 2px solid rgba(0, 84, 188, 0.3);
+    border-radius: 50%;
+    line-height: 100px;
+    text-align: center;
+    font-size: 30px;
+    text-align: center;
+    color: #ddd;
+    position: relative;
+    left: 25px;
+    top: 25px;
+    overflow: hidden;
+    font-family: "Roboto-Thin";
+}
+
+.box::before {
+    content: "";
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background: rgb(0, 169, 157);
+    left: 50%;
+    transform: translateX(-30%);
+    border-radius: 40%;
+    z-index: -1;
+    animation: fill 7s ease-out forwards, rotation 7s linear infinite;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -174,5 +204,23 @@ body {
     to {
 
         transform: scale(1.0);
+    }
+}
+
+@keyframes fill {
+    from {
+        top: 110px;
+    }
+    to {
+        top: 50px;
+    }
+}
+
+@keyframes rotation {
+    from {
+        transform: translateX(-50%) rotate(0deg);
+    }
+    to {
+        transform: translateX(-50%) rotate(360deg);
     }
 }
