--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -90,6 +90,14 @@ body {
     animation-fill-mode: forwards;
 }
 
+.moduleNaviShowUp {
+    animation-name: fadeIn;
+    animation-duration: 0.3s;
+    animation-timing-function: linear;
+    animation-delay: calc(0.1s * var(--delay));
+    animation-fill-mode: forwards;
+}
+
 .title {
     color: white;
     font-size: 20px;
@@ -231,7 +239,7 @@ body {
 @keyframes fadeIn {
     from {
         opacity: 0;
-        transform: scale(0.9);
+        transform: scale(var(--scale));
     }
 
     to {
