--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -130,44 +130,6 @@ body {
     animation-fill-mode: forwards;
 }
 
-.moduleNavi-contain {
-    position: absolute;
-    top: 100px;
-    right: calc(460px + 20 * var(--right) + var(--offset));
-    width: 16px;
-    height: 30px;
-    opacity: 0;
-}
-
-.moduleNaviFill, .moduleNaviEmpty {
-    position: absolute;
-    /* top: 100px; */
-    /* right: calc(460px + 20 * var(--right)); */
-    width: 13px;
-    height: 30px;
-    opacity: 1.0;
-}
-
-.moduleNavi-split {
-    position: absolute;
-    /* top: 100px; */
-    /* right: calc(460px + 20 * var(--right)); */
-    width: 13px;
-    height: 30px;
-    opacity: 1.0;
-    background-color: black;
-}
-
-.moduleNaviShowUp {
-    animation-name: fadeIn;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-delay: calc(0.02s * var(--delay));
-    animation-fill-mode: forwards;
-    --opacity: 0.5;
-    --scale: 0.8;
-}
-
 .body-left-grid {
     width: 620px;
     height: 740px;
@@ -189,6 +151,7 @@ body {
 }
 
 .grid-item {
+    position: relative;
     background-color: rgba(26, 26, 26, 0.3);
     border: 1px solid rgba(50, 50, 50, 0.3);
     /* animation-name: scaleUp;
@@ -320,7 +283,45 @@ body {
     background-color: blue;
     color: white;
   } */
-  
+
+.moduleNavi-contain {
+    position: absolute;
+    top: 100px;
+    right: calc(460px + 20 * var(--right) + var(--offset));
+    width: 16px;
+    height: 30px;
+    opacity: 0;
+}
+
+.moduleNaviFill, .moduleNaviEmpty {
+    position: absolute;
+    /* top: 100px; */
+    /* right: calc(460px + 20 * var(--right)); */
+    width: 13px;
+    height: 30px;
+    opacity: 1.0;
+}
+
+.moduleNavi-split {
+    position: absolute;
+    /* top: 100px; */
+    /* right: calc(460px + 20 * var(--right)); */
+    width: 13px;
+    height: 30px;
+    opacity: 1.0;
+    background-color: black;
+}
+
+.moduleNaviShowUp {
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-delay: calc(0.02s * var(--delay));
+    animation-fill-mode: forwards;
+    --opacity: 0.5;
+    --scale: 0.8;
+}
+
 .tooltiptext {
     visibility: hidden;
     width: 60px;
