--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -299,12 +299,15 @@ body {
 }
 
 .moduleNavi-contain {
+    display: flex;
+    justify-content: center;
     position: absolute;
     top: 100px;
     right: calc(460px + 20 * var(--right) + var(--offset));
     width: 16px;
     height: 30px;
     opacity: 0;
+    background-color: red;
 }
 
 .moduleNaviFill, .moduleNaviEmpty {
@@ -338,8 +341,8 @@ body {
 
 .tooltiptext {
     visibility: hidden;
-    width: 60px;
-    background-color: black;
+    width: 80px;
+    background-color: red;
     color: white;
     text-align: center;
     border-radius: 3px;
@@ -347,10 +350,9 @@ body {
     position: absolute;
     z-index: 1;
     bottom: 120%;
-    left: 50%;
-    margin-left: -30px;
+    left: 0%;
+    margin-left: 0px;
     font-family: "Roboto-Thin";
-
     opacity: 0;
     transition: opacity 1s;
 }
