--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -307,15 +307,14 @@ body {
     width: 16px;
     height: 30px;
     opacity: 0;
-    background-color: red;
 }
 
 .moduleNaviFill, .moduleNaviEmpty {
     position: absolute;
     /* top: 100px; */
     /* right: calc(460px + 20 * var(--right)); */
-    width: 13px;
-    height: 30px;
+    /* width: 16px; */
+    /* height: 30px; */
     opacity: 1.0;
 }
 
@@ -323,10 +322,25 @@ body {
     position: absolute;
     /* top: 100px; */
     /* right: calc(460px + 20 * var(--right)); */
-    width: 13px;
-    height: 30px;
+    /* width: 16px; */
+    /* height: 30px; */
     opacity: 1.0;
     background-color: black;
+}
+
+.moduleNaviQWR {
+    width: 10px;
+    height: 30px;
+}
+
+.moduleNaviHWRA {
+    width: 12px;
+    height: 30px;
+}
+
+.moduleNaviHWRB {
+    width: 14px;
+    height: 30px;
 }
 
 .moduleNaviShowUp {
@@ -342,16 +356,16 @@ body {
 .tooltiptext {
     visibility: hidden;
     width: 80px;
-    background-color: red;
+    /* background-color: red; */
     color: white;
     text-align: center;
     border-radius: 3px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    bottom: 120%;
-    left: 0%;
-    margin-left: 0px;
+    bottom: 40px;
+    left: -32px;
+    /* margin-left: 40px; */
     font-family: "Roboto-Thin";
     opacity: 0;
     transition: opacity 1s;
