--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -18,10 +18,10 @@
 }
 
 body {
-    /* overflow: hidden; */
+    overflow: hidden;
     margin: 0px;
-    /* width: 1920px;
-    height: 1080px; */
+    width: 1920px;
+    height: 1080px;
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
