--- a/raon-control/schedule.css
+++ b/raon-control/schedule.css
@@ -19,9 +19,9 @@
 
 body {
     overflow: hidden;
-    margin: 0px;
+    /* margin: 0px;
     width: 1920px;
-    height: 1080px;
+    height: 1080px; */
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
