--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    overflow: hidden;
+    /* overflow: hidden; */
     /* margin: 0px;
     width: 1920px;
     height: 1080px; */
@@ -484,6 +484,29 @@ body {
 
     to {
         opacity: 1.0;
+    }
+}
+
+#sineWave {
+    stroke: #80bfff;
+    stroke-width: 2px; 
+    stroke-linecap: round; 
+    fill: none;
+    stroke-dasharray: 310;
+    stroke-dashoffset: 310;
+    animation-name: sineWaveDashOffset;
+    animation-duration: 1.0s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes sineWaveDashOffset {
+    0% {
+      stroke-dashoffset: 310;
+    }
+    
+    100% {
+      stroke-dashoffset: 0;
     }
 }
 
