--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -22,6 +22,7 @@ body {
     /* margin: 0px;
     width: 1920px;
     height: 1080px; */
+    margin: 0px;
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
@@ -64,8 +65,8 @@ body {
     font-family: "Helvetica-Neue-Light";
 }
 
-.status-box {
-    /* background-color: black; */
+/* .status-box {
+    background-color: black;
     width: 300px;
     height: 50px;
     color: white;
@@ -74,7 +75,7 @@ body {
     text-align: center;
     font-size: 60px;
     font-family: "Roboto-Thin";
-}
+} */
 
 .title {
     color: white;
